# ERC20_Pallet

./: Cargo.toml  README.md
pallets/erc20/: Cargo.toml
pallets/erc20/erc20/: Cargo.toml
pallets/erc20/src/: lib.rs  mock.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
