[package]
name = "solochain-template-runtime"
description = "A solochain runtime template built with Substrate, part of Polkadot SDK. (polkadot v1.15.0)"
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition = "2021"  # Specify the Rust edition
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
frame-support = { version = "4.0.0", features = ["experimental"] }
frame-system = { version = "4.0.0" }
pallet-balances = { version = "4.0.0" }
pallet-aura = { version = "4.0.0" }
pallet-grandpa = { version = "4.0.0" }
pallet-sudo = { version = "4.0.0" }
pallet-timestamp = { version = "4.0.0" }
pallet-transaction-payment = { version = "4.0.0" }

codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive", "serde"], workspace = true }

sp-api = { version = "4.0.0" }
sp-block-builder = { version = "4.0.0" }
sp-consensus-aura = { version = "4.0.0", features = ["serde"] }
sp-consensus-grandpa = { version = "4.0.0", features = ["serde"] }
sp-core = { version = "4.0.0", features = ["serde"] }
sp-runtime = { version = "4.0.0", features = ["serde"] }

# Your ERC20 pallet dependency
[dependencies.erc20]
path = "../pallets/erc20"
default-features = false

[build-dependencies]
substrate-wasm-builder = { optional = true, workspace = true, default-features = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-executive/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-aura/std",
    "pallet-balances/std",
    "pallet-grandpa/std",
    "pallet-sudo/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment/std",
    "sp-api/std",
    "sp-block-builder/std",
    "sp-consensus-aura/std",
    "sp-consensus-grandpa/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-storage/std",
    "sp-transaction-pool/std",
    "sp-version/std",
]

runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-grandpa/runtime-benchmarks",
    "pallet-sudo/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]

try-runtime = [
    "frame-executive/try-runtime",
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "pallet-aura/try-runtime",
    "pallet-balances/try-runtime",
    "pallet-grandpa/try-runtime",
    "pallet-sudo/try-runtime",
    "pallet-timestamp/try-runtime",
    "pallet-transaction-payment/try-runtime",
    "sp-runtime/try-runtime",
]
